[package]
name = "bot-tariff"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.rs_merkle]
version = "1.5"
default-features = false
features = []

[dependencies.blake2]
version = "0.10"
default-features = false
features = []

[dependencies.hkdf]
version = "0.12"
default-features = false
features = []

[dev-dependencies.rand]
version = "0.9"
default-features = false
features = ["os_rng"]
