[package]
name = "bot-tariff"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.rs_merkle]
version = "1.5"
default-features = false
features = []

[dependencies.blake2]
version = "0.10"
default-features = false
features = []

[dependencies.hkdf]
version = "0.12"
default-features = false
features = []

[dependencies.wasm-bindgen]
optional = true
version = "0.2"
default-features = false
features = []

[dev-dependencies.rand]
version = "0.9"
default-features = false
features = ["os_rng"]

[dev-dependencies.sha2]
version = "0.10"
default-features = false
features = ["std", "force-soft"]

[features]
default = ["wasm", "server"]
wasm = ["wasm-bindgen"]
server = []

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
lto = "fat"
debug = true
debug-assertions = true
overflow-checks = true

[profile.test]
inherits = "dev"